syntax = "proto3";

package protobuf.opencb.service;

option java_package = "org.opencb.opencga.server.grpc";
option java_outer_classname = "GenericServiceModel";

message Request {
    string storageEngine = 1;
    string database = 2;
    string user = 3;
    string password = 4;
    string ip = 5;
    map<string, string> query = 6;
    map<string, string> options = 7;
}
