syntax = "proto3";

package protobuf.opencb.service;

option java_package = "org.opencb.opencga.server.grpc";
option java_outer_classname = "VariantServiceModel";

import "protobuf/opencb/service/generic_service.proto";
import "protobuf/opencb/variant.proto";
import "protobuf/opencb/service_types.proto";

service VariantService {

    rpc count(Request) returns (LongResponse) {}

    rpc distinct(Request) returns (StringArrayResponse) {}

    rpc get(Request) returns (stream Variant) {}

    rpc groupBy(Request) returns (GroupResponse) {}

}
